fixed dark mode size

--- a/frontend/containers/SidebarContainerStyles.module.scss
+++ b/frontend/containers/SidebarContainerStyles.module.scss
@@ -33,7 +33,7 @@
 .darkmode {
   background-color: rgba(127, 255, 212, 0);
   border: none;
-  font-size: 17px;
+  font-size: 28px;
   text-decoration: none;
   padding-bottom: 1vh;
   padding-top: 1vh;
